--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "chrome-aws-lambda": "^6",
     "express": "^4.18.2",
-    "puppeteer": "^20.2.0"
+    "puppeteer": "^6",
+    "puppeteer-core": "^6.0.0"
   }
 }
