--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
-    "chrome-aws-lambda": "^6",
+    "chrome-aws-lambda": "10.1.0",
     "express": "^4.18.2",
     "puppeteer": "^6",
-    "puppeteer-core": "^6.0.0"
+    "puppeteer-core": "10.1.0"
   }
 }
