--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "chrome-aws-lambda": "10.1.0",
     "express": "^4.18.2",
+    "node-fetch": "^3.3.1",
     "puppeteer": "^6",
     "puppeteer-core": "10.1.0"
   }
