--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@resvg/resvg-js": "^2.2.0",
     "axios": "^1.4.0",
-    "chrome-aws-lambda": "10.1.0",
     "express": "^4.18.2",
     "node-fetch": "^3.3.1",
-    "puppeteer": "^6",
-    "puppeteer-core": "10.1.0"
+    "satori": "^0.0.44",
+    "satori-html": "^0.3.2"
   }
 }
